# artscii_desktop

./: .gitignore  CMakeLists.txt
include/: artscii_processor.h  img_manager.h  png_decoder.h
include_qt/: main_window.h
src/: artscii_processor.cpp  img_manager.cpp  png_decoder.cpp
src_qt/: main.cpp  main_window.cpp
